--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,9 @@
   "ecmaFeatures": {
     "modules": true
   },
-
+  "parserOptions": {
+    "sourceType": "module"
+  },
   "rules": {
     "comma-dangle": 2,
     "no-cond-assign": [2, "except-parens"],
@@ -61,7 +63,6 @@
     "no-caller": 2,
     "no-div-regex": 1,
     "no-else-return": 2,
-    "no-empty-label": 2,
     "no-eq-null": 2,
     "no-eval": 2,
     "no-extend-native": 2,
@@ -152,14 +153,12 @@
     "semi": [2, "always"],
     "sort-vars": 0,
     "space-before-function-paren": [2, "never"],
-    "space-after-keywords": [2, "always"],
     "space-before-blocks": [2, "always"],
     "object-curly-spacing": [1, "never"],
     "array-bracket-spacing": [1, "never"],
     "computed-property-spacing": [1, "never"],
     "space-in-parens": [2, "never"],
     "space-infix-ops": 2,
-    "space-return-throw-case": 2,
     "space-unary-ops": [2, { "words": true, "nonwords": false }],
     "wrap-regex": 0,
 
