--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fivetwelve",
-  "version": "1.0.0-dev",
+  "version": "1.0.0-alpha.1",
   "description": "dmx512 lighting control library",
   "keywords": [
     "dmx",
