--- a/.eslintrc
+++ b/.eslintrc
@@ -23,7 +23,8 @@
   "rules": {
     "comma-dangle": 2,
     "no-cond-assign": [2, "except-parens"],
-    "no-console": 1,
+//    "no-console": [1, {"allow": ["warn", "error"]}],
+    "no-console": 0,
     "no-constant-condition": 2,
     "no-control-regex": 2,
     "no-debugger": 1,
